--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "epam",
   "version": "0.0.1",
   "dependencies": {
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "gulp": "^3.9.1"
   }
 }
