--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.11.1",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.2.0"
   }
 }
