--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "browser-sync": "^2.11.1",
+    "css-reset": "0.0.1",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0"
+    "gulp-sass": "^2.2.0",
+    "jquery": "^2.2.0"
   }
 }
